public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
  font-size: 16px;
}

h1 {
  font-family: "Archivo Black", system-ui;
  font-weight: 600;
  font-style: normal;
}

a {
  text-decoration: none;
  color: rgb(255, 255, 255)
}

/*Navigation*/

nav {
  background-color: #865c26
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  list-style: none
}

nav ul li {
  flex-grow: 1;
  text-align: center
}

nav a {
  display: block;
  color: #eee;
  padding: 0.75rem;
  text-align: center;
  transition: all 0.3s ease
}

nav ul li a:hover {
  background-color: rgb(24, 24, 24);
  transition: all 0.3s ease
}

/*Header*/

#top-header {
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: 1rem;
  margin-right: 1rem;
}

header a {
  color: black;
}

header a:hover {
  color: #7337ff;
}

.siteName a {
  font-size: 2.5rem;
  font-weight: 800;
}

/*Hero Image*/

.hero {
  position: relative;
  overflow: hidden;
  padding: 4rem;
}

.hero h1 {
  font-size: 2rem;
  font-weight: 800;
}

.hero img {
  width: 100%;
  height: auto;
  display: block;
}

.hero-content {
  position: absolute;
  top: 10%;
  left: 5%;
  color: rgb(0, 0, 0);
  z-index: 10;
}

.car-details {
  display: flex;
  flex-direction: column;
  background-color: #f3e7d7d5;
  width: 80%;
  padding: 1rem;
  border-radius: 8px;
  margin-top: 20px;
}

.car-details h2 {
  font-size: 1.5rem;
  font-weight: 600;
}


.car-details button {
  text-decoration: none;
  height: 60px;
  padding: 10px 20px;
  margin-left: 1rem;
  margin-right: 1rem;
  margin-top: 1rem;
  border: none;
  outline: none;
  border-radius: 4px;
  background-color: #d33c21;
  color: rgb(255, 255, 255);
  transition: all 0.3s ease;
}

.car-details button:hover {
  background-color: #7337ff;
  transition: all 0.3s ease;
  color: white;
}

/*Home*/

.home-grid {
  margin: 1rem;
}

.home-grid h2 {
  font-size: 2rem;
  margin-bottom: 4rem;
  font-weight: bold;
}



/*Cards*/

.reviews {
  margin-bottom: 2rem;
}

.reviews ul {
  list-style-position: inside;
}

.reviews li {
  margin-top: 1rem;
}

.upgrades {
  width: 100%;
}

.upgrade-grid {
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.upgrade-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.upgrade-card a {
  color: #7337ff;
}

.upgrade-box {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #e0ae6d;
  border-radius: 1rem;
  border: 3px solid #a77348;
  width: 100%;
  height: 150px;
  padding: 1rem;
  margin-bottom: 0.5rem;
}

footer {
  margin-top: 1rem;
  padding: 0.5rem;
}

@media (min-width: 900px) {
  .home-box {
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
    border-radius: 1rem;
    border: 6px #865c26 solid;
    background-color: white;
  }

  #home main {
    display: grid;
    gap: 4rem;
    grid-template-columns: 1fr 1fr;
    margin: 2rem;
  }

  .hero h1 {
    font-size: 3rem;
  }

  .hero .car-details h2 {
    font-size: 3rem;
  }

  .hero .car-details p {
    font-size: 2.5rem;
  }

  .upgrades {
    grid-column: 1/2;
    grid-row: 1/2;
  }

  .reviews {
    grid-column: 2/3;
    grid-row: 1/2;
  }

  .reviews li {
    font-size: 1.5rem;
  }

  #home {
    background-image: url("../images/site/checkerboard.jpg");
    background-repeat: repeat;
    padding: 2rem 0;
  }

  .car-details button {
    margin-left: 2rem;
    margin-right: 2rem;
    margin-top: 2rem;
  }

}

